# hr-ranking-langchain

./: .env.example  .gitignore  README.md  prompts.toml  pyproject.toml
.chainlit/: config.toml
hr_ranking_langchain/: config.py  logger.py  pyvenv.cfg  toml_support.py
hr_ranking_langchain/models/: candidate.py  keyword.py  skills.py
hr_ranking_langchain/plot/: bar_chart.py
hr_ranking_langchain/services/: document_service.py  evaluation_service.py  file_service.py  keyword_service.py  skill_check_service.py
hr_ranking_langchain/ui/: avatar_factory.py  hr_ranking_langchain_chainlit.py
public/css/: styles.css
